# bedrock-slack-ai-chatbot

./: .gitignore  .terraform.lock.hcl  CLAUDE.md  README.md  data.tf  handle_app_mention_events.py  locals.tf  main.tf  main_api_gateway.tf  main_apigateway.tf  main_bedrock.tf  main_dynamodb.tf  main_iam.tf  main_lambda.tf  main_logs.tf  main_sqs.tf  outputs.tf  providers.tf  pyproject.toml  renovate.json  terraform.tf  variables.tf
.github/workflows/: github-actions.yml  python-ci.yml  tfsec.yml  trivy.yml
bedrock_backend_lambda/: bedrock_backend.py
lambda_function/: bedrock_backend.py  lambda_function.py
lambda_function_bedrock_backend/: boto3_utils.py  lambda_function.py
lambda_function_slack_ai_chatbot/: lambda_function.py
modules/api_gateway/: main.tf  variables.tf
modules/bedrock_backend/: data.tf  main_iam.tf  main_lambda.tf  variables.tf
modules/bedrock_backend/lambda_function/: lambda_function.py
modules/slack_bolt_app/: data.tf  main_iam.tf  main_lambda.tf  outputs.tf
modules/slack_bolt_app/lambda_function/: lambda_function.py
modules/sqs/: main.tf  outputs.tf  variables.tf
